// Copyright 2019 Antrea Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.vmware_tanzu.antrea.pkg.apis.networking.v1beta1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1beta1";

// +genclient
// +genclient:nonNamespaced
// +genclient:onlyVerbs=list,get,watch
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AddressGroup is the message format of antrea/pkg/controller/types.AddressGroup in an API response.
message AddressGroup {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // IPAddresses is a list of IP addresses selected by this group.
  repeated bytes ipAddresses = 2;
}

// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AddressGroupList is a list of AddressGroup objects.
message AddressGroupList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated AddressGroup items = 2;
}

// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AddressGroupPatch describes the incremental update of an AddressGroup.
message AddressGroupPatch {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  repeated bytes addedIPAddresses = 2;

  repeated bytes removedIPAddresses = 3;
}

// +genclient
// +genclient:nonNamespaced
// +genclient:onlyVerbs=list,get,watch
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AppliedToGroup is the message format of antrea/pkg/controller/types.AppliedToGroup in an API response.
message AppliedToGroup {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Pods is a list of Pods selected by this group.
  repeated PodReference pods = 2;
}

// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AppliedToGroupList is a list of AppliedToGroup objects.
message AppliedToGroupList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated AppliedToGroup items = 2;
}

// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// AppliedToGroupPatch describes the incremental update of an AppliedToGroup.
message AppliedToGroupPatch {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  repeated PodReference addedPods = 2;

  repeated PodReference removedPods = 3;
}

// IPBlock describes a particular CIDR (Ex. "192.168.1.1/24"). The except entry describes CIDRs that should
// not be included within this rule.
message IPBlock {
  // CIDR is an IPNet represents the IP Block.
  optional IPNet cidr = 1;

  // Except is a slice of IPNets that should not be included within an IP Block.
  // Except values will be rejected if they are outside the CIDR range.
  // +optional
  repeated IPNet except = 2;
}

// IPNet describes an IP network.
message IPNet {
  optional bytes ip = 1;

  optional int32 prefixLength = 2;
}

// +genclient
// +genclient:onlyVerbs=list,get,watch
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// NetworkPolicy is the message format of antrea/pkg/controller/types.NetworkPolicy in an API response.
message NetworkPolicy {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Rules is a list of rules to be applied to the selected Pods.
  repeated NetworkPolicyRule rules = 2;

  // AppliedToGroups is a list of names of AppliedToGroups to which this policy applies.
  repeated string appliedToGroups = 3;
}

// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// NetworkPolicyList is a list of NetworkPolicy objects.
message NetworkPolicyList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated NetworkPolicy items = 2;
}

// NetworkPolicyPeer describes a peer of NetworkPolicyRules.
// It could be a list of names of AddressGroups and/or a list of IPBlock.
message NetworkPolicyPeer {
  // A list of names of AddressGroups.
  repeated string addressGroups = 1;

  // A list of IPBlock.
  repeated IPBlock ipBlocks = 2;
}

// NetworkPolicyRule describes a particular set of traffic that is allowed.
message NetworkPolicyRule {
  // The direction of this rule.
  // If it's set to In, From must be set and To must not be set.
  // If it's set to Out, To must be set and From must not be set.
  optional string direction = 1;

  // From represents sources which should be able to access the pods selected by the policy.
  optional NetworkPolicyPeer from = 2;

  // To represents destinations which should be able to be accessed by the pods selected by the policy.
  optional NetworkPolicyPeer to = 3;

  // Services is a list of services which should be matched.
  repeated Service services = 4;
}

// PodReference represents a Pod Reference.
message PodReference {
  // The name of this pod.
  optional string name = 1;

  // The namespace of this pod.
  optional string namespace = 2;
}

// Service describes a port to allow traffic on.
message Service {
  // The protocol (TCP, UDP, or SCTP) which traffic must match. If not specified, this
  // field defaults to TCP.
  // +optional
  optional string protocol = 1;

  // The port on the given protocol. If not specified, this matches all port numbers.
  // +optional
  optional int32 port = 2;
}

